--- a/pkfy_first.html
+++ b/pkfy_first.html
@@ -8,5 +8,5 @@
   </style>
 </head>
 <body>
-<h2 class="name"> This is h2 tag </h2>
+<h2 class="name"> This is h2 tag having font-size 20px</h2>
 </html>
